Revert perliminary changes

--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -14,15 +14,8 @@
           li id="result-offer-#{offer.id}" class="JS-trigger-marker Listing-results__listitem"
             h3.Listing-results__offer
               = link_to offer.name, offer_path(id: offer)
-            / ToDo: Refactor and rename
             h4.Listing-results__organisation
-              - if offer.location
-                = offer.location.street
-                |,
-                =<> offer.location.zip
-                = offer.location.city
-              - else
-                | Kein Standort
+              = offer.organization_name
       = paginate @offers
 
 
