--- a/app/views/offers/invalid_location.html.slim
+++ b/app/views/offers/invalid_location.html.slim
@@ -3,4 +3,6 @@ h1
   = params['search_form']['search_location']
   | " nicht gefunden
 
-p Dies ist ein simpler Infotext, der definitiv noch sinnvolleren Inhalt braucht.
+p
+  | Bitte überprüfe noch mal die von dir eingegebenen Adressdaten und versuche
+  | gegebenenfalls mit einer alternativen Eingabe (z.B. "Postleitzahl Ort").
