--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -70,6 +70,13 @@
 		}
 	}
 
+	a[href^="tel"]:link,
+	a[href^="tel"]:visited,
+	a[href^="tel"]:hover {
+	    text-decoration: underline;
+	    pointer-events: auto;
+	}
+
 	// Footer ######################################
 
 	.nav-site__listitem {
