--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -29,3 +29,14 @@ ul {
 	margin: 0;
 	padding: 0;
 }
+
+/**
+ * Make 'tel' link not appear as links on desktop.
+ */
+
+a[href^="tel"]:link,
+a[href^="tel"]:visited,
+a[href^="tel"]:hover {
+    text-decoration: none;
+    pointer-events: none;
+}
