Add fallback font for Roboto, generic system sans-serif

--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -50,19 +50,19 @@
 }
 
 %roboto_regular {
-	font-family: 'roboto-regular';
+	font-family: 'roboto-regular', sans-serif;
 }
 
 %roboto_light {
-	font-family: 'roboto-light';
+	font-family: 'roboto-light', sans-serif;
 }
 
 %roboto_bold {
-	font-family: 'roboto-bold';
+	font-family: 'roboto-bold', sans-serif;
 }
 
 %roboto_italic {
-	font-family: 'roboto-italic';
+	font-family: 'roboto-italic', sans-serif;
 }
 
 body {
