Extend placeholder related mixin with font-size parameter

--- a/app/assets/stylesheets/form/_base.scss
+++ b/app/assets/stylesheets/form/_base.scss
@@ -19,7 +19,7 @@ input[type="submit"] {
 
 input[type='text'],
 input[type='email'] {
-	@include input-placeholder($brand_brown, 400);
+	@include input-placeholder($brand_brown, 400, null);
 	@extend %roboto_light;
 	background: $brand_white;
 }
