--- a/app/assets/stylesheets/config/_mixins.scss
+++ b/app/assets/stylesheets/config/_mixins.scss
@@ -4,24 +4,28 @@
 //
 // ---------------------------------------------------------------
 
-@mixin input-placeholder($color, $font-weight) {
+@mixin input-placeholder($color, $font-weight, $font-size) {
 	&.placeholder {
 		color: $color;
 		font-weight: $font-weight;
+		font-size: $font-size;
 	}
 
 	&::-moz-placeholder {
 		color: $color;
 		font-weight: $font-weight;
+		font-size: $font-size;
 	}
 
 	&::-webkit-input-placeholder {
 		color: $color;
 		font-weight: $font-weight;
+		font-size: $font-size;
 	}
 
 	&:-ms-input-placeholder {
 		color: $color;
 		font-weight: $font-weight;
+		font-size: $font-size;
 	}
 }
