Add basic styling to home page in lower mediaqueries (M, S)

--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -6,7 +6,7 @@
 
 @include breakpoint(XL) {
 
-	//@include mqindicator('XL');
+	@include mqindicator('XL');
 
 
 	// Header ######################################
