--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -6,7 +6,7 @@
 
 @include breakpoint(L) {
 
-	// @include mqindicator('L');
+	@include mqindicator('L');
 
 	// Header ######################################
 
