--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -45,7 +45,8 @@ html class='no-js' lang=I18n.locale
   body class="template--#{controller_name}-#{action_name}"
     .page-wrap
       - flash.each do |message|
-        div class="Flash-message Flash-message--#{message[0]} fade in"= message[1]
+        - unless message[0] == 'timedout'
+            div class="Flash-message Flash-message--#{message[0]} fade in"= message[1]
 
       - if controller_name == 'pages' && action_name == 'home' || controller_name == 'pages' && action_name == 'about'
         = render 'layouts/partials/navigation', search_cache: @search_cache
