fix autocompletion and result display for missing locations

--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -19,7 +19,7 @@
               - if offer.location
                 = offer.location_address
               - else
-                | Kein Standort
+                | Standortunabhängig
       = paginate @offers
 
 
