--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -24,25 +24,23 @@
           p== @offer.next_steps
 
       / ToDo: Refactor!
-      - if @offer.openings.any? || @offer.opening_specification
+      - if @offer.has_opening_details?
         section.section-content.section-content--openinghours
           h3.section-content__title Öffnungszeiten
           .section-content__body
-            - unless @offer.openings.empty?
+            - if @offer.openings.any?
               table
                 -@offer.openings.order('sort_value').each do |opening|
                   tr
                     td
-                      = t("activerecord.models.opening.#{opening.day}")
-                      |:&nbsp;
+                      = t("activerecord.models.opening.#{opening.day}") + ': '
                     td
                       - if opening.open && opening.close
                         = "#{opening.open.strftime("%H:%M")} - #{opening.close.strftime("%H:%M")}"
                       - else
                         | Nach Vereinbarung
-            / ToDo: Refactor (seriously)!
-            - if @offer.opening_specification && !@offer.opening_specification.empty?
-              - unless @offer.openings.empty?
+            - unless @offer.opening_specification.blank?
+              - if @offer.openings.any?
                 br
               == @offer.opening_specification
 
