refactor html to slim

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -117,7 +117,7 @@
                 = link_to tag.name, '#'
 
       button.offer-contribute
-        | <i class="fa fa-pencil-square-o"></i>
+        i.fa.fa-pencil-square-o
         | Sind die hier dargestellten Informationen fehlerhaft oder unvollständig, lass es uns bitte wissen!
 
 
