--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -6,7 +6,7 @@
 
 @include breakpoint(M) {
 
-	@include mqindicator('M');
+	//@include mqindicator('M');
 
 
 	// Header ######################################
@@ -31,6 +31,11 @@
 
 		.wrapper-inner {
 			padding: 0;
+
+			.template--pages-home &,
+			.template--pages-about & {
+				padding: 0 20px;
+			}
 		}
 	}
 
@@ -48,10 +53,6 @@
 		border-radius: 0;
 	}
 
-	.Distributor,
-	.search_form {
-		//TODO: Massive layout change, JS supported
-	}
 
 	#new_search_form {
 		padding-left: 10px;
@@ -71,12 +72,12 @@
 		float: none;
 		width: 100%;
 		height: 60px;
-		background-position: 95% top;
+		background-position: 100% top;
 		background-size: contain;
 		line-height: 57px; // closer to optical vertical middle
 
 		a {
-			padding: 0 5%;
+			padding: 0;
 			text-align: left;
 		}
 	}
