Fix claim on startpage, main-content padding in S, M

--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -175,7 +175,9 @@
 		}
 	}
 
-	.template--pages-faq {
+	.template--pages-faq,
+	.template--offers-show,
+	.template--organizations-show {
 		.content-main.content-main--wide {
 			padding: 105px 0 0;
 		}
