--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -14,6 +14,7 @@
 	.Logo {
 		margin-top: 25px;
 		margin-left: 20px;
+		margin-bottom: 15px;
 	}
 
 	.Logo--start {
@@ -22,8 +23,10 @@
 
 	.Claim {
 		float: none;
-		margin-top: 120px;
+		margin-top: 0;
 		max-width: 100%;
+		display: block;
+		clear: both;
 	}
 
 	.header-main {
@@ -44,7 +47,7 @@
 	}
 
 	.Distributor {
-		margin-top: 25px;
+		//margin-top: 25px;
 		margin-right: 0;
 		margin-left: 0;
 		padding-left: 0;
