for #48 - begin implementing google places autocomplete

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,7 @@
 @import "mediaqueries/config";
 
 @import "vendor/twitter-typeahead_override";
+@import "vendor/places-autocomplete_override";
 @import "vendor/formtastic";
 
 
