--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -122,5 +122,5 @@
 
 
 - content_for :view_specific_scripts do
-  = javascript_include_tag "https://maps.googleapis.com/maps/api/js?v=3.exp"
+  /= javascript_include_tag "https://maps.googleapis.com/maps/api/js?v=3.exp"
   = javascript_include_tag "gmaps_search_results.js"
