--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -3,5 +3,5 @@ header.header-main
     h1.Logo.Logo = link_to "clarat.org", '/'
     .mascot.mascot--header
 
-    .Distributor
+    .Distributor.Distributor--navigation
       = render '/offers/shared/search_form', search_cache: search_cache
