Change wording for locations without location

--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -19,7 +19,7 @@
               - if offer.location
                 = offer.location_address
               - else
-                | Standortunabhängig
+                | Überall erreichbar, egal, wo du bist
       = paginate @offers
 
 
