--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,7 +22,7 @@ html class='no-js' lang=I18n.locale
     link rel="Shortcut Icon" href="favico.ico" type="image/x-icon"
     link rel="apple-touch-icon-precomposed" sizes="144x144" href=""
     meta name="msapplication-TileImage" content=""
-
+    meta name="theme-color" content="#F4B528"
 
     |     <!--[if lt IE 9]>
     |       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
