finish #48 - improvements for places autocomplete

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,7 @@ html class='no-js' lang=I18n.locale
     = javascript_include_tag "vendor/modernizr.custom.js"
 
     = javascript_include_tag "application", "data-turbolinks-track" => true
-    = javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false.exp"
+    = javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&language=de&sensor=false&v=3.exp"
     = render '/layouts/partials/javascript_config'
 
     meta http-equiv="X-UA-Compatible" content="IE=edge"
