for #42 - basic contact form

--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -23,7 +23,7 @@ footer.footer-main
             li.nav-site__listitem
               = link_to 'Häufige Fragen', '/haeufige-fragen'
             li.nav-site__listitem
-              = link_to 'Kontakt', '#'
+              = link_to 'Kontakt', new_contact_path
 
   section.footer-main__secondrow
     .wrapper-inner
