finalizing touches and styling for #42 and #58

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,7 @@
 @import "form/base";
 @import "form/main-search";
 @import "form/newsletter-subscribe";
+@import "form/contact-form";
 
 @import "navigation/nav-sections";
 @import "navigation/nav-site";
@@ -49,7 +50,3 @@
 @import "vendor/twitter-typeahead_override";
 @import "vendor/places-autocomplete_override";
 @import "vendor/formtastic";
-
-
-
-
