--- a/app/assets/stylesheets/form/_main-search.scss
+++ b/app/assets/stylesheets/form/_main-search.scss
@@ -6,71 +6,69 @@
 
 
 #new_search_form {
-	@extend %clearfix;
-	padding: 25px 0 0 25px;
-	width: 640px;
-	list-style: none;
+  @extend %clearfix;
+  padding: 25px 0 0 25px;
+  width: 640px;
+  list-style: none;
 
-	label {
-		@extend %visually-hidden;
-	}
+  label {
+    @extend %visually-hidden;
+  }
 
-	.template--pages-home & {
-		position: relative;
-		margin: 0 auto;
-		padding: 30px 0 0;
-		width: 780px;
+  .template--pages-home & {
+    position: relative;
+    margin: 0 auto;
+    padding: 30px 0 0;
+    width: 780px;
 
-		#search_form_query,
-		#search_form_search_location,
-		.main-search__submit {
-			display: inline-block;
-			height: 50px;
-		}
+    #search_form_query,
+    #search_form_search_location,
+    .main-search__submit {
+      display: inline-block;
+      height: 50px;
+    }
 
-		#search_form_query,
-		#search_form_search_location {
-			width: 340px;
-		}
-	}
+    #search_form_query,
+    #search_form_search_location {
+      width: 340px;
+    }
+  }
 
 }
 
 #search_form_query,
 #search_form_search_location {
-	margin-right: 10px;
-	padding: 0 15px;
-	font-size: 22px;
+  background: $brand_white;
+  margin-right: 10px;
+  padding: 0 15px;
+  font-size: 22px;
+
+  // explicit definition and using important to override twitter-typeahead
+  &:focus {
+    background: $brand_beige !important;
+  }
 }
 
 #search_form_query,
 #search_form_search_location,
 .main-search__submit {
-	float: left;
-	height: 47px;
+  float: left;
+  height: 47px;
 }
 
 .main-search__submit {
-	display: block;
-	width: 75px;
-	background: $brand_brown image-url('ico_search.svg') no-repeat center center;
-	color: transparent;
-	text-shadow: none;
-	font: 0/0 a;
+  display: block;
+  width: 75px;
+  background: $brand_brown image-url('ico_search.svg') no-repeat center center;
+  color: transparent;
+  text-shadow: none;
+  font: 0/0 a;
 }
 
 #search_form_query {
-	@extend %clarat_rounding_start;
-
-	// explicit definition and using important to override twitter-typeahead
-	&:focus {
-		background: $brand_beige !important;
-	}
+  @extend %clarat_rounding_start;
 }
 
 .main-search__submit {
-	@extend %clarat_rounding_end;
+  @extend %clarat_rounding_end;
 }
-
-
-
