--- a/app/views/contacts/new.html.slim
+++ b/app/views/contacts/new.html.slim
@@ -1,3 +1,4 @@
 .wrapper-inner
   main.content-main
+    h2 Kontakt aufnehmen
     = render '/contacts/shared/new', contact: @contact, requires_email: true
