--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -24,8 +24,7 @@
 
 
       - if @update_request
-        #unavailable_location_overlay style="background:white;width:500px;"
-          button.unavailable_location_overlay_close X
+        = modal_for 'unavailable_location_overlay' do
           p
             | Leider finden sich auf unserer Plattform aktuell nur Angebote aus
             |  Berlin. Wir hoffen aber schon bald auch in anderen Teilen
