for #58 - ajaxify report overlay (& other ajax improvements and fixes)

--- a/app/assets/stylesheets/form/_contact-form.scss
+++ b/app/assets/stylesheets/form/_contact-form.scss
@@ -9,12 +9,12 @@
 
   .string input,
   .email input,
-  textarea {
+  textarea,
+  &.formtastic .inline-errors {
     width: 440px;
   }
 
-  .string,
-  .email {
+  .stringish {
     margin-bottom: 5px;
   }
 }
